--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,16 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
     implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.google.code.gson:gson:2.8.2'
     androidTestImplementation 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation ('com.android.support.test.espresso:espresso-contrib:2.2'){
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude module: 'recyclerview-v7'
+    }
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.1'
 }
